Avoid using deprecated methods in Java 9
Also explicitly specify Groovy version to use in Groovy plugin,
to avoid error in Java 9.